--- a/html/los/assets-icons/output/icons.fallback.css
+++ b/html/los/assets-icons/output/icons.fallback.css
@@ -24,6 +24,8 @@
 
 .icon-header-right { background-image: url('png/header-right.png'); background-repeat: no-repeat; }
 
+.icon-los-logo { background-image: url('png/los-logo.png'); background-repeat: no-repeat; }
+
 .icon-menu { background-image: url('png/menu.png'); background-repeat: no-repeat; }
 
 .icon-mie-logo { background-image: url('png/mie-logo.png'); background-repeat: no-repeat; }
