--- a/html/los/css/output/patterns/02-buttons.css
+++ b/html/los/css/output/patterns/02-buttons.css
@@ -18,7 +18,7 @@
   background-color: #588D49; }
 
 .bg--light {
-  background-color: #6BB64C; }
+  background-color: #61A445; }
 
 .bg--light-pastel {
   background-color: #A1EA83; }
@@ -55,13 +55,13 @@
     border-bottom: 0.2em solid #4f7f42; }
 
 .btn--light {
-  background-color: #6BB64C;
+  background-color: #61A445;
   color: #ffffff;
-  border-bottom: 0.2em solid #4b8034; }
+  border-bottom: 0.2em solid #447330; }
   .btn--light:hover {
-    box-shadow: inset 0 0 0 0.2em #a6d394;
-    background-color: #6BB64C;
-    border-bottom: 0.2em solid #55933c; }
+    box-shadow: inset 0 0 0 0.2em #9ece8a;
+    background-color: #61A445;
+    border-bottom: 0.2em solid #4e8337; }
 
 .btn--light-pastel {
   background-color: #A1EA83;
