--- a/html/los/css/output/patterns/02-calls-to-action.css
+++ b/html/los/css/output/patterns/02-calls-to-action.css
@@ -18,7 +18,7 @@
   background-color: #588D49; }
 
 .bg--light {
-  background-color: #6BB64C; }
+  background-color: #61A445; }
 
 .bg--light-pastel {
   background-color: #A1EA83; }
@@ -87,7 +87,7 @@
     border-left: none; }
 
 .cta.icon-pattern {
-  border-color: #6BB64C; }
+  border-color: #61A445; }
 
 .cta--no-circle div {
   display: none; }
