--- a/html/los/css/output/patterns/03-blockquote.css
+++ b/html/los/css/output/patterns/03-blockquote.css
@@ -19,7 +19,7 @@
   background-color: #588D49; }
 
 .bg--light {
-  background-color: #6BB64C; }
+  background-color: #61A445; }
 
 .bg--light-pastel {
   background-color: #A1EA83; }
@@ -46,7 +46,7 @@ blockquote.quote__blockquote {
   font-size: 1.6em;
   vertical-align: -0.2em;
   margin-left: -0.1em;
-  color: #6BB64C; }
+  color: #61A445; }
 
 .quote em {
   font-style: normal; }
