--- a/html/los/css/output/patterns/06-content-indexes.css
+++ b/html/los/css/output/patterns/06-content-indexes.css
@@ -19,7 +19,7 @@
   background-color: #588D49; }
 
 .bg--light {
-  background-color: #6BB64C; }
+  background-color: #61A445; }
 
 .bg--light-pastel {
   background-color: #A1EA83; }
@@ -27,7 +27,7 @@
 .list__jump-nav {
   padding: 1em;
   width: 100%;
-  background-color: #e9f4e4;
+  background-color: #e7f3e2;
   text-align: center;
   margin: 0 0 2em 0; }
 
