--- a/html/los/css/output/patterns/0-navigation.css
+++ b/html/los/css/output/patterns/0-navigation.css
@@ -19,7 +19,7 @@
   background-color: #588D49; }
 
 .bg--light {
-  background-color: #6BB64C; }
+  background-color: #61A445; }
 
 .bg--light-pastel {
   background-color: #A1EA83; }
