--- a/html/los/css/sass/patterns/0-login.scss
+++ b/html/los/css/sass/patterns/0-login.scss
@@ -106,10 +106,14 @@
   }
   form .btn {
     margin: 0;
+    color: $default-text;
   }
   input[type=text],
   input[type=password] {
     margin-bottom: 0;
+    &:focus {
+	    border: 0.2em solid $darkest;
+    }
   }
 }
 
