--- a/html/los/css/output/global.css
+++ b/html/los/css/output/global.css
@@ -1874,24 +1874,17 @@ footer i {
 @media only all and (min-width: 41em) {
   .nav__trigger {
     display: none; }
+  nav {
+    border-top: 0.15em solid #A1EA83; }
   .main-nav li {
-    background-color: #1f2020; }
+    background-color: #363838; }
     .main-nav li:nth-child(2) {
-      background-color: #1c1c1c; }
+      background-color: #4c4e4e; }
   .main-nav li a.active {
     color: #ffffff;
     text-decoration: underline; }
   .js nav.nav-collapse {
     position: static !important; }
-  .secondary-nav-spaceholder {
-    display: inline-block;
-    text-align: center;
-    width: 100%;
-    background-color: #588D49;
-    padding: 1.1em 5% 1.2em 5%;
-    color: #ffffff; }
-    .secondary-nav-spaceholder span {
-      font-size: 1.1em; }
   .main-nav li {
     z-index: 100;
     height: 3.6em;
@@ -1905,26 +1898,30 @@ footer i {
 	      width: 100%;
 	      padding: 0.8em 5% 1em 5%;
       }*/ }
-    .main-nav li:nth-child(1), .main-nav li:nth-child(5) {
+    .main-nav li:nth-child(1), .main-nav li:nth-child(3) {
       padding: 0; }
-      .main-nav li:nth-child(1) a, .main-nav li:nth-child(5) a {
+      .main-nav li:nth-child(1) a, .main-nav li:nth-child(3) a {
         width: 100%;
         padding: 0.9em 5% 1em 5%; }
     .main-nav li:nth-child(2) {
-      width: 37%; }
+      width: 40%; }
     .main-nav li:nth-child(3) {
-      width: 38%; }
+      width: 35%; }
     .main-nav li:nth-child(4) {
-      border-right: 0.15em solid #181919; }
+      border-right: 0.2em solid #395c2f;
+      width: 60%; }
+    .main-nav li:nth-child(5) {
+      width: 40%; }
     .main-nav li:nth-child(4), .main-nav li:nth-child(5) {
-      width: 50%;
-      background-color: #0d0d0d; }
+      background-color: #304e28; }
   .js nav.nav-collapse .main-nav li:nth-child(2) .sub-menu.open {
-    width: 37%; }
+    width: 40%; }
   .js nav.nav-collapse .main-nav li:nth-child(3) .sub-menu.open {
-    width: 38%; }
-  .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open {
-    min-width: 50%; }
+    width: 35%; }
+  .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open {
+    min-width: 60%; }
+  .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open {
+    min-width: 40%; }
   .js .main-nav .parent-item {
     float: none;
     padding-top: 0.9em; }
@@ -1965,15 +1962,15 @@ footer i {
     margin: 0 0 0 0;
     padding: 0 5% 0 5%; }
   .nav-collapse .main-nav {
-    height: 6em;
+    height: 7.2em;
     max-width: 80em;
     margin: 0 auto 0 auto; }
   .main-nav li {
     text-align: center;
     font-size: 0.9em;
     font-weight: 400;
-    margin-right: 2.5%;
-    padding: 0.4em 0 1.2em 0;
+    margin-right: 3.5%;
+    padding: 0.4em 0 2.2em 0;
     background-color: inherit;
     height: 100%;
     float: left;
@@ -1988,17 +1985,8 @@ footer i {
       margin-right: 0; }
     .main-nav li a {
       height: auto; }
-    .main-nav li:nth-child(1) {
-      width: 12%; }
-    .main-nav li:nth-child(2) {
-      width: 20%; }
-    .main-nav li:nth-child(3) {
-      width: 20%; }
-    .main-nav li:nth-child(4) {
-      width: 20%; }
-    .main-nav li:nth-child(5) {
-      width: 18%;
-      margin-right: 0; }
+  .main-nav li:hover .sectiontoggle div {
+    background-color: #588D49; }
   .main-nav li a, .main-nav .parent-item {
     text-align: center;
     width: 100%;
@@ -2012,6 +2000,8 @@ footer i {
     display: block;
     width: 100%;
     margin: 0; }
+    .js .main-nav .parent .sectiontoggle div {
+      background-color: #1c1c1c; }
   .main-nav .sub-menu {
     visibility: hidden;
     position: absolute;
@@ -2020,18 +2010,20 @@ footer i {
     width: 100%; }
     .main-nav .sub-menu a {
       height: auto; }
-  .main-nav li:hover .sub-menu, .main-nav li.section-active .sub-menu {
+  .main-nav li:hover .sub-menu, .js nav.nav-collapse .main-nav ul.sub-menu.open {
     background-color: #588D49;
     display: block;
     visibility: visible;
     height: auto;
     position: absolute;
-    margin-top: 1.2em;
-    left: 0;
+    margin-top: 0.6em;
+    left: auto;
     width: 100%;
-    max-width: 100%;
+    max-width: 27%;
     margin-left: 0;
-    padding: 0.4em 4% 0.4em 4%; }
+    padding: 0; }
+  .js nav.nav-collapse .main-nav li:nth-child(2) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open {
+    width: inherit; }
   .main-nav .sub-menu li a {
     font-size: 1.1em;
     width: 100%; }
@@ -2040,32 +2032,35 @@ footer i {
     .main-nav .sub-menu li a:after {
       content: " »"; }
   .js nav.nav-collapse .main-nav ul.sub-menu li {
-    width: auto;
-    text-align: center;
+    width: 100%;
+    text-align: left;
     display: inline-block;
     background-color: #588D49;
     padding: 0;
-    margin: 0 2% 0 2%;
+    margin: 0;
     float: none; }
-    .js nav.nav-collapse .main-nav ul.sub-menu li a {
-      padding: 0.4em 0.5em 0.4em 0.5em; }
     .js nav.nav-collapse .main-nav ul.sub-menu li:hover a {
       text-decoration: underline;
       background-color: #44693C; }
-  .js nav.nav-collapse .main-nav ul.sub-menu li a {
-    width: 100%;
-    text-align: center;
-    background-color: #588D49; }
-  .js nav.nav-collapse .main-nav ul.sub-menu.open {
-    margin: 1.2em 0 0 0;
-    padding: 0.4em 4% 0.4em 4%;
-    text-align: center;
-    min-width: initial;
-    background-color: #588D49; }
+  .js nav.nav-collapse .main-nav ul.sub-menu li {
+    display: block; }
+    .js nav.nav-collapse .main-nav ul.sub-menu li a {
+      width: 100%;
+      text-align: left;
+      background-color: #252626;
+      padding: 0.6em 0.8em 0.6em 0.8em; }
+      .js nav.nav-collapse .main-nav ul.sub-menu li a:hover {
+        background-color: #3a5933;
+        text-decoration: underline; }
+    .js nav.nav-collapse .main-nav ul.sub-menu li:nth-child(2n) a {
+      background-color: #363838; }
+      .js nav.nav-collapse .main-nav ul.sub-menu li:nth-child(2n) a:hover {
+        background-color: #3a5933;
+        text-decoration: underline; }
   .main-nav .sub-menu li {
     height: auto;
     width: 100%;
-    float: left;
+    float: none;
     background-color: #4b7442;
     padding: 0 1em 0 0;
     font-size: 1em; }
@@ -2077,16 +2072,12 @@ footer i {
     width: auto;
     text-align: left;
     margin: 0; }
-  .js nav.nav-collapse .main-nav li:nth-child(3) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(2) .sub-menu.open {
-    width: 100%; }
   .js nav.nav-collapse .main-nav li ul.sub-menu li .active {
     text-decoration: underline;
-    background-color: #44693C;
+    background-color: #3a5933;
     cursor: not-allowed; }
     .js nav.nav-collapse .main-nav li ul.sub-menu li .active:before, .js nav.nav-collapse .main-nav li ul.sub-menu li .active:after {
-      content: none; } }
-
-@media only all and (min-width: 71.25em) {
+      content: none; }
   .main-nav li {
     padding-bottom: 0; }
     .main-nav li a {
@@ -2097,18 +2088,18 @@ footer i {
       width: 8%;
       margin-right: 5%; }
     .main-nav li:nth-child(2) {
-      width: 18%;
+      width: 15%;
       margin-right: 7%; }
       .main-nav li:nth-child(2) a {
         width: 85%; }
     .main-nav li:nth-child(3) {
-      width: 16%;
-      margin-right: 8%; }
+      width: 17%;
+      margin-right: 4%; }
     .main-nav li:nth-child(4) {
-      width: 15%;
+      width: 19%;
       margin-right: 7%; }
     .main-nav li:nth-child(5) {
-      width: 16%;
+      width: 14%;
       margin-right: 0; }
       .main-nav li:nth-child(5) a {
         width: 85%; }
@@ -2117,11 +2108,11 @@ footer i {
     text-align: left;
     padding-top: 0.6em; }
   .nav-collapse .main-nav {
-    height: 3.4em; }
+    height: 4.7em; }
   .main-nav li.home a, .main-nav li.browse-films a {
     margin-top: 0; }
   .js nav.nav-collapse .main-nav ul.sub-menu, .js nav.nav-collapse .main-nav ul.sub-menu.open {
-    margin: 0.3em 0 0 0;
+    margin: 0.2em 0 0 0;
     width: 100%; }
   .js .main-nav .parent .sectiontoggle {
     float: right;
@@ -2130,9 +2121,74 @@ footer i {
     width: 10%;
     margin: 0.5em 0 0 0; } }
 
+@media only all and (min-width: 63.9375em) {
+  .main-nav li:nth-child(1) {
+    width: 8%;
+    margin-right: 5%; }
+  .main-nav li:nth-child(2) {
+    width: 14%;
+    margin-right: 7%; }
+    .main-nav li:nth-child(2) a {
+      width: 85%; }
+  .main-nav li:nth-child(3) {
+    width: 17%;
+    margin-right: 4%; }
+  .main-nav li:nth-child(4) {
+    width: 19%;
+    margin-right: 7%; }
+  .main-nav li:nth-child(5) {
+    width: 18%;
+    margin-right: 0; }
+    .main-nav li:nth-child(5) a {
+      width: 85%; } }
+
 @media only all and (min-width: 74em) {
+  .nav-collapse .main-nav {
+    height: 3.4em; }
+  .main-nav li:hover .sub-menu, .main-nav li.section-active .sub-menu {
+    margin-top: 0.3em; }
   .js .main-nav {
-    max-width: 69.57em; } }
+    max-width: 69.57em; }
+  .main-nav li:nth-child(1) {
+    width: 8%;
+    margin-right: 4%; }
+  .main-nav li:nth-child(2) {
+    width: 12%;
+    margin-right: 8%; }
+    .main-nav li:nth-child(2) a {
+      width: 85%; }
+  .main-nav li:nth-child(3) {
+    width: 14%;
+    margin-right: 3%; }
+  .main-nav li:nth-child(4) {
+    width: 26%;
+    margin-right: 6%; }
+  .main-nav li:nth-child(5) {
+    width: 17%;
+    margin-right: 0; }
+    .main-nav li:nth-child(5) a {
+      width: 85%; } }
+
+@media only all and (min-width: 79em) {
+  .main-nav li:nth-child(1) {
+    width: 8%;
+    margin-right: 5%; }
+  .main-nav li:nth-child(2) {
+    width: 11%;
+    margin-right: 9%; }
+    .main-nav li:nth-child(2) a {
+      width: 85%; }
+  .main-nav li:nth-child(3) {
+    width: 14%;
+    margin-right: 4%; }
+  .main-nav li:nth-child(4) {
+    width: 22%;
+    margin-right: 9%; }
+  .main-nav li:nth-child(5) {
+    width: 15%;
+    margin-right: 0; }
+    .main-nav li:nth-child(5) a {
+      width: 85%; } }
 
 .pattern {
   background: url(../../assets/pattern.png);
