--- a/html/los/css/sass/patterns/0-navigation.scss
+++ b/html/los/css/sass/patterns/0-navigation.scss
@@ -409,24 +409,27 @@
  
   
   .main-nav li:hover .sub-menu,
-  .js nav.nav-collapse .main-nav ul.sub-menu.open {
+  .js nav.nav-collapse .main-nav ul.sub-menu.open,
+  .js nav.nav-collapse .main-nav li:nth-child(2) .sub-menu.open,
+  .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open,
+  .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open {
 	  background-color: $mid;
     display: block;
     visibility: visible;
     height: auto;
     position: absolute;
-    margin-top: 0.6em;
+    margin-top: 0.2em;
     left: auto;
     width: 100%;
     max-width: 27%;
+    min-width: inherit;
     margin-left: 0;
     padding: 0;
   }
   
-  .js nav.nav-collapse .main-nav li:nth-child(2) .sub-menu.open,
-  .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open,
-  .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open {
-	  width: inherit;
+  .main-nav li:nth-child(5):hover .sub-menu, 
+  .js nav.nav-collapse .main-nav li:nth-child(5) ul.sub-menu.open {
+	  max-width: 22%;
   }
   
   .main-nav .sub-menu li a {
