--- a/html/los/css/output/global.css
+++ b/html/los/css/output/global.css
@@ -1780,7 +1780,7 @@ footer i {
   border-bottom: none;
   padding: 0.6em 0 0.7em 8%; }
 
-.main-nav li .active, .main-nav li:nth-child(2n) .active {
+.main-nav li .active {
   color: #ffffff;
   text-decoration: underline; }
 
@@ -1992,6 +1992,8 @@ footer i {
     width: 100%;
     max-width: 100%;
     padding-left: 0; }
+  .main-nav li a.active {
+    color: #bdf0a8; }
   .main-nav li.home a, .main-nav li.browse-films a {
     margin-top: 0.375em; }
   .js .main-nav .parent .sectiontoggle {
@@ -2090,7 +2092,8 @@ footer i {
       margin-right: 5%; }
     .main-nav li:nth-child(2) {
       width: 15%;
-      margin-right: 7%; }
+      margin-right: 7%;
+      padding-bottom: 2.8em; }
       .main-nav li:nth-child(2) a {
         width: 85%; }
     .main-nav li:nth-child(3) {
@@ -2122,7 +2125,7 @@ footer i {
     width: 10%;
     margin: 0.5em 0 0 0; } }
 
-@media only all and (min-width: 63.9375em) {
+@media only all and (min-width: 66.25em) {
   .main-nav li:nth-child(1) {
     width: 8%;
     margin-right: 5%; }
@@ -2141,13 +2144,16 @@ footer i {
     width: 18%;
     margin-right: 0; }
     .main-nav li:nth-child(5) a {
-      width: 85%; } }
+      width: 85%; }
+  .main-nav li:nth-child(5):hover .sub-menu, .js nav.nav-collapse .main-nav li:nth-child(5) ul.sub-menu.open {
+    max-width: 23%; } }
 
 @media only all and (min-width: 74em) {
   .nav-collapse .main-nav {
     height: 3.4em; }
-  .main-nav li:hover .sub-menu, .main-nav li.section-active .sub-menu {
-    margin-top: 0.3em; }
+  .main-nav li:hover .sub-menu, .js nav.nav-collapse .main-nav ul.sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(2) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open {
+    margin-top: 0.2em;
+    max-width: 25%; }
   .js .main-nav {
     max-width: 69.57em; }
   .main-nav li:nth-child(1) {
@@ -2183,13 +2189,20 @@ footer i {
     width: 14%;
     margin-right: 4%; }
   .main-nav li:nth-child(4) {
-    width: 22%;
-    margin-right: 9%; }
+    width: 24%;
+    margin-right: 7%; }
   .main-nav li:nth-child(5) {
     width: 15%;
     margin-right: 0; }
     .main-nav li:nth-child(5) a {
       width: 85%; } }
+
+@media only all and (min-width: 86em) {
+  .main-nav li:nth-child(1) {
+    margin-right: 7%; }
+  .main-nav li:nth-child(4) {
+    width: 22%;
+    margin-right: 7%; } }
 
 .pattern {
   background: url(../../assets/pattern.png);
